chore: Java compatibility